// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps should match a snapshot 1`] = `
<ElSteps
  className=""
>
  <ElStep
    className=""
    onClick={[Function]}
  >
    1
  </ElStep>
  <ElStep
    className=""
    onClick={[Function]}
  >
    2
  </ElStep>
  <ElStep
    className=""
    onClick={[Function]}
  >
    3
  </ElStep>
  <ElStep
    className=""
    onClick={[Function]}
  >
    4
  </ElStep>
  <ElStep
    className=""
    onClick={[Function]}
  >
    5
  </ElStep>
</ElSteps>
`;

exports[`Steps should match a snapshot when selectedStep is different 1`] = `
<ElSteps
  className=""
>
  <ElStep
    className="el-is-used"
    onClick={[Function]}
  >
    1
  </ElStep>
  <ElStep
    className="el-is-active"
    onClick={[Function]}
  >
    2
  </ElStep>
  <ElStep
    className=""
    onClick={[Function]}
  >
    3
  </ElStep>
  <ElStep
    className=""
    onClick={[Function]}
  >
    4
  </ElStep>
  <ElStep
    className=""
    onClick={[Function]}
  >
    5
  </ElStep>
</ElSteps>
`;
